monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4069/A4069Sub.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4069;
 grammar A4069Sub extends de.monticore.grammar.cocos.invalid.A4069.A4069Super{
    token StartTag = "<";
    token EndTag = ">";
}